# blockChain_mini

./: CMakeLists.txt  README.md  block.cpp  block.h  main.cpp  node.cpp  node.h  sha256.cpp  sha256.h  transaction.cpp  transaction.h
